# tynk-dialog

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: test_core_functionality.yml
tests/: test_core_functionality.py
tests/data/: example_dialog.json  example_multi_dialog.json
tynk_dialog/: models.py  serializers.py
