[tool.poetry]
name = "tynk-dialog"
version = "0.1.0"
description = "create and manage dialog for tynk and the final phonorecord"
authors = ["jadevogt <me@jadev.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
indent-string = "	"

[tool.mypy]
disallow_untyped_defs = true